--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
-    <title>Claudia Gonzalez</title>
+    <title><i>Claudia Gonzalez</i></title>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -77,8 +77,8 @@
         <div class="ms-auto col-12 col-md-7">
           <h1 class="display-1 fw-bold my-5">Curriculum vitae</h1>
           <p class="my-5">
-            Estudiante de programación web en Desafío Latam. Experiencia en
-            gastronomía. disfruto de la música y amante de los animales.
+          <i>  Estudiante de programación web en Desafío Latam. Experiencia en
+            gastronomía. disfruto de la música y amante de los animales.</i>
           </p>
 
           <div class="mb-5 pb-5"></div>
@@ -90,7 +90,7 @@
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
       <p class="my-4 fs-5">
-        Hola, mi nombre es Ofelia, aunque mi nombre completo es Claudia González
+        <i><b>Hola, mi nombre es Ofelia, aunque mi nombre completo es Claudia González
         Molina. Nací el 19 de diciembre de 1998, lo que significa que
         actualmente tengo 24 años. Soy una persona empática y comprometida, y
         actualmente estoy estudiando programación web en Desafío Latam. Además,
@@ -103,7 +103,7 @@
         profesionalmente. Si estás interesado en conocer más acerca de mí o en
         explorar posibles colaboraciones, no dudes en contactarme. Estoy abierta
         a escuchar propuestas y a conocer nuevas personas que puedan aportar en
-        mi camino de desarrollo y crecimiento
+        mi camino de desarrollo y crecimiento</b></i>
       </p>
 
       <div class="row text-success">
@@ -174,7 +174,7 @@
       </section>
     </div>
 
-    <div class="bg-success">
+    <div class="bg-danger">
       <section id="Experiencia" class="container text-center my-5 p-1 mb-0 mt-0 fs-4 ">
         <h2 class="display-3 fw-bold my-4">Experiencia</h2>
         
